fixed post image display on small devices, renamed a post

--- a/_sass/_devinsipal.scss
+++ b/_sass/_devinsipal.scss
@@ -1,4 +1,4 @@
-$link-color: #00ff10;
+$link-color: #00eb10;
 $background-color: #fff;
 $active-page-color: #fff;
 $active-page-bgcolor: #000;
