--- a/_sass/components/_post.scss
+++ b/_sass/components/_post.scss
@@ -8,6 +8,7 @@
   height: auto;
   object-fit: contain;
   max-height: 80vh;
+  margin-bottom: 15px;
 }
 .post-name {
   padding: 0;
@@ -35,21 +36,10 @@
 
 }
 
-
-@media screen and (max-width: 1199px){
-  .post-name-date{
-    justify-content: center;
-  }
-  .post-name{
-    text-align: center;
-  }
-}
-
 @media screen and (max-width: 1199px){
   .post-name-date{
     justify-content: center;
     max-width: none;
-    margin-top: 25px;
   }
   .post-name{
     text-align: center;
@@ -58,6 +48,12 @@
     text-align: center;
     float: none;
     margin: 0 auto;
+  }
+}
+
+@media screen and (max-width: 826px) {
+  .post-img {
+    width: 100%;
   }
 }
 
